tests/error/type_match/base_case_tuple_mismatched_elem_count3.bz
// error: unable to match type '[i32]' to '[i32, float64, ...str]'
// note: mismatched tuple element counts: 1 and 3
function test()
{
	let _: [i32, float64, ...str] = [i32]();
}
